--- a/plugin.yml
+++ b/plugin.yml
@@ -1,5 +1,5 @@
 name: HammerPlus
-main: Antaxio\HammerPlus\Hammer
+main: Antaxio\Hammer\Hammer
 api: [3.3.2, 3.3.0, 3.3.1, 3.3.3 , 3.3.4 ,3.3.5 , 4.0.0]
 author: Antaxio
 version: 0.1
